tests/neg/safe-setting.check
-- Error: tests/neg/safe-setting.scala:3:13 ----------------------------------------------------------------------------
3 |def main() = println("hello") // error
  |             ^^^^^^^
  |             Cannot refer to method println from safe code since it is tagged @rejectSafe
